# jython-scijava-logging

./: .gitignore  .travis.yml  CONTRIBUTING.md  DESC.md  README.md  poetry-build.sh  pom.xml  pyproject.toml  release.properties  run-poetry.sh
extra/: README.md
extra/scripts/: minimal-example.py
scripts/: example.py
src/main/resources/sjlogging/: __init__.py  handler.py
