### WARNING: this is exlusively useful for creating a mock-package that can be
### used to e.g. generate API docs with pdoc!

[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Jython package for using SciJava's LogService for logging."
name = "sjlogging"
readme = "README.md"
version = "0.5.2"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
